--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Phaser 3 Template</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="sass/main.scss" />
-  <script src="js/main.ts"></script>
+  <link rel="stylesheet" type="text/css" media="screen" href="src/sass/main.scss" />
+  <script src="src/main.ts"></script>
 </head>
-
 <body>
   <script>
   </script>
